descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2013-0X-XX  Release 7.24.2                                     ---
----------------------------------------------------------------------

* fixed loss of MGED bu_log output after running wdb_cmd - Cliff Yapp
* added -s size option for rtwizard image output - Cliff Yapp
* documented image size options in rtwizard man page - Cliff Yapp
* added view center specification dialog to rtwizard - Cliff Yapp
* increased rtwizard window size for button visibility - Cliff Yapp
* improved solid NURBS geometry ray tracing behavior - Keith Bowman
* fix z-clipping bug in MGED's X display manager - Cliff Yapp
* added attribute sorting option to the 'attr' command - Tom Browder
* changed 'bwfilter' tool offset option from -o to -O - Mohit Daga
* gattributes section 5 man page renamed to attributes - Tom Browder
* changed 'benchmark' defaults: 2% deviation, 5 frames - Sean Morrison
* improved bwrect to handle redirected input and output - Mohit Daga
* fixed TIE mesh raytrace crashes on 32-bit platforms - Sean Morrison
* fixed pixscale and bwscale to not output ioctl error - Mohit Daga
* fixed adrt/TIE polygonal mesh memory management bug - Richard Weiss
* fixed fast4-g importer parsing of blank input lines - Richard Weiss
* added -o flag to 'bb' command for oriented bounding box - Cliff Yapp
* allow search to see hidden combs with the -a flag - Cliff Yapp
* added comb -l lift option to change region designation - Cliff Yapp
* improved NURBS ray tracing grazing hit behavior - Keith Bowman
* print current grid information in gqa output - Cliff Yapp
* added -f option for flattening combs to 'comb' command - Cliff Yapp
* added support for boolean op filtering in search - Cliff Yapp
* added new g-raw geometry converter - Jon Engbert, Daniel Roßberg